// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for checked/default/disabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": true,
  "icon": "ph-check",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 0.5,
  "ringVariable": "color-border",
  "size": 16,
  "state": "checked",
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for checked/default/enabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": false,
  "icon": "ph-check",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 1,
  "ringVariable": "color-border",
  "size": 16,
  "state": "checked",
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for checked/error/disabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": true,
  "icon": "ph-check",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 0.5,
  "ringVariable": "color-error",
  "size": 16,
  "state": "checked",
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for checked/error/enabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": false,
  "icon": "ph-check",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 1,
  "ringVariable": "color-error",
  "size": 16,
  "state": "checked",
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for indeterminate/default/disabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": true,
  "icon": "ph-minus",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 0.5,
  "ringVariable": "color-border",
  "size": 16,
  "state": "indeterminate",
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for indeterminate/default/enabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": false,
  "icon": "ph-minus",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 1,
  "ringVariable": "color-border",
  "size": 16,
  "state": "indeterminate",
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for indeterminate/error/disabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": true,
  "icon": "ph-minus",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 0.5,
  "ringVariable": "color-error",
  "size": 16,
  "state": "indeterminate",
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for indeterminate/error/enabled 1`] = `
{
  "bgVariable": "color-surface-inverse",
  "borderRadius": 4,
  "disabled": false,
  "icon": "ph-minus",
  "iconColor": "text-white",
  "iconSize": 12,
  "opacity": 1,
  "ringVariable": "color-error",
  "size": 16,
  "state": "indeterminate",
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for unchecked/default/disabled 1`] = `
{
  "bgVariable": "color-surface",
  "borderRadius": 4,
  "disabled": true,
  "icon": null,
  "iconColor": null,
  "iconSize": null,
  "opacity": 0.5,
  "ringVariable": "color-border",
  "size": 16,
  "state": "unchecked",
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for unchecked/default/enabled 1`] = `
{
  "bgVariable": "color-surface",
  "borderRadius": 4,
  "disabled": false,
  "icon": null,
  "iconColor": null,
  "iconSize": null,
  "opacity": 1,
  "ringVariable": "color-border",
  "size": 16,
  "state": "unchecked",
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for unchecked/error/disabled 1`] = `
{
  "bgVariable": "color-surface",
  "borderRadius": 4,
  "disabled": true,
  "icon": null,
  "iconColor": null,
  "iconSize": null,
  "opacity": 0.5,
  "ringVariable": "color-error",
  "size": 16,
  "state": "unchecked",
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent box config for unchecked/error/enabled 1`] = `
{
  "bgVariable": "color-surface",
  "borderRadius": 4,
  "disabled": false,
  "icon": null,
  "iconColor": null,
  "iconSize": null,
  "opacity": 1,
  "ringVariable": "color-error",
  "size": 16,
  "state": "unchecked",
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for checked/default/enabled 1`] = `
{
  "boxConfig": {
    "bgVariable": "color-surface-inverse",
    "borderRadius": 4,
    "disabled": false,
    "icon": "ph-check",
    "iconColor": "text-white",
    "iconSize": 12,
    "opacity": 1,
    "ringVariable": "color-border",
    "size": 16,
    "state": "checked",
    "variant": "default",
  },
  "disabled": false,
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 8,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "opacity": 1,
  "state": "checked",
  "stylingConfig": {
    "baseTokens": [
      "bg-surface",
      "ring-border",
    ],
    "borderRadius": "rounded-sm",
    "dimensions": "h-4 w-4",
    "icons": [
      {
        "name": "ph-check",
        "size": 12,
        "state": "checked",
      },
      {
        "name": "ph-minus",
        "size": 12,
        "state": "indeterminate",
      },
    ],
    "states": {
      "checked": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
      "disabled": [
        "opacity-50",
        "cursor-not-allowed",
      ],
      "error": [
        "ring-error",
      ],
      "focus": [
        "ring-active",
      ],
      "hover": [
        "ring-active",
      ],
      "indeterminate": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
    },
  },
  "textConfig": {
    "fontSize": 14,
    "fontWeight": 500,
    "textVariable": "text-color-surface",
  },
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for checked/error/disabled 1`] = `
{
  "boxConfig": {
    "bgVariable": "color-surface-inverse",
    "borderRadius": 4,
    "disabled": true,
    "icon": "ph-check",
    "iconColor": "text-white",
    "iconSize": 12,
    "opacity": 0.5,
    "ringVariable": "color-error",
    "size": 16,
    "state": "checked",
    "variant": "error",
  },
  "disabled": true,
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 8,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "opacity": 0.5,
  "state": "checked",
  "stylingConfig": {
    "baseTokens": [
      "bg-surface",
      "ring-border",
    ],
    "borderRadius": "rounded-sm",
    "dimensions": "h-4 w-4",
    "icons": [
      {
        "name": "ph-check",
        "size": 12,
        "state": "checked",
      },
      {
        "name": "ph-minus",
        "size": 12,
        "state": "indeterminate",
      },
    ],
    "states": {
      "checked": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
      "disabled": [
        "opacity-50",
        "cursor-not-allowed",
      ],
      "error": [
        "ring-error",
      ],
      "focus": [
        "ring-active",
      ],
      "hover": [
        "ring-active",
      ],
      "indeterminate": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
    },
  },
  "textConfig": {
    "fontSize": 14,
    "fontWeight": 500,
    "textVariable": "text-color-surface",
  },
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for indeterminate/default/enabled 1`] = `
{
  "boxConfig": {
    "bgVariable": "color-surface-inverse",
    "borderRadius": 4,
    "disabled": false,
    "icon": "ph-minus",
    "iconColor": "text-white",
    "iconSize": 12,
    "opacity": 1,
    "ringVariable": "color-border",
    "size": 16,
    "state": "indeterminate",
    "variant": "default",
  },
  "disabled": false,
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 8,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "opacity": 1,
  "state": "indeterminate",
  "stylingConfig": {
    "baseTokens": [
      "bg-surface",
      "ring-border",
    ],
    "borderRadius": "rounded-sm",
    "dimensions": "h-4 w-4",
    "icons": [
      {
        "name": "ph-check",
        "size": 12,
        "state": "checked",
      },
      {
        "name": "ph-minus",
        "size": 12,
        "state": "indeterminate",
      },
    ],
    "states": {
      "checked": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
      "disabled": [
        "opacity-50",
        "cursor-not-allowed",
      ],
      "error": [
        "ring-error",
      ],
      "focus": [
        "ring-active",
      ],
      "hover": [
        "ring-active",
      ],
      "indeterminate": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
    },
  },
  "textConfig": {
    "fontSize": 14,
    "fontWeight": 500,
    "textVariable": "text-color-surface",
  },
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for unchecked/default/enabled 1`] = `
{
  "boxConfig": {
    "bgVariable": "color-surface",
    "borderRadius": 4,
    "disabled": false,
    "icon": null,
    "iconColor": null,
    "iconSize": null,
    "opacity": 1,
    "ringVariable": "color-border",
    "size": 16,
    "state": "unchecked",
    "variant": "default",
  },
  "disabled": false,
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 8,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "opacity": 1,
  "state": "unchecked",
  "stylingConfig": {
    "baseTokens": [
      "bg-surface",
      "ring-border",
    ],
    "borderRadius": "rounded-sm",
    "dimensions": "h-4 w-4",
    "icons": [
      {
        "name": "ph-check",
        "size": 12,
        "state": "checked",
      },
      {
        "name": "ph-minus",
        "size": 12,
        "state": "indeterminate",
      },
    ],
    "states": {
      "checked": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
      "disabled": [
        "opacity-50",
        "cursor-not-allowed",
      ],
      "error": [
        "ring-error",
      ],
      "focus": [
        "ring-active",
      ],
      "hover": [
        "ring-active",
      ],
      "indeterminate": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
    },
  },
  "textConfig": {
    "fontSize": 14,
    "fontWeight": 500,
    "textVariable": "text-color-surface",
  },
  "variant": "default",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for unchecked/error/enabled 1`] = `
{
  "boxConfig": {
    "bgVariable": "color-surface",
    "borderRadius": 4,
    "disabled": false,
    "icon": null,
    "iconColor": null,
    "iconSize": null,
    "opacity": 1,
    "ringVariable": "color-error",
    "size": 16,
    "state": "unchecked",
    "variant": "error",
  },
  "disabled": false,
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 8,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "opacity": 1,
  "state": "unchecked",
  "stylingConfig": {
    "baseTokens": [
      "bg-surface",
      "ring-border",
    ],
    "borderRadius": "rounded-sm",
    "dimensions": "h-4 w-4",
    "icons": [
      {
        "name": "ph-check",
        "size": 12,
        "state": "checked",
      },
      {
        "name": "ph-minus",
        "size": 12,
        "state": "indeterminate",
      },
    ],
    "states": {
      "checked": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
      "disabled": [
        "opacity-50",
        "cursor-not-allowed",
      ],
      "error": [
        "ring-error",
      ],
      "focus": [
        "ring-active",
      ],
      "hover": [
        "ring-active",
      ],
      "indeterminate": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
    },
  },
  "textConfig": {
    "fontSize": 14,
    "fontWeight": 500,
    "textVariable": "text-color-surface",
  },
  "variant": "error",
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all variants (golden path) 1`] = `
{
  "boxConfigs": [
    {
      "bgVariable": "color-surface",
      "borderRadius": 4,
      "disabled": false,
      "icon": null,
      "iconColor": null,
      "iconSize": null,
      "opacity": 1,
      "ringVariable": "color-border",
      "size": 16,
      "state": "unchecked",
      "variant": "default",
    },
    {
      "bgVariable": "color-surface",
      "borderRadius": 4,
      "disabled": true,
      "icon": null,
      "iconColor": null,
      "iconSize": null,
      "opacity": 0.5,
      "ringVariable": "color-border",
      "size": 16,
      "state": "unchecked",
      "variant": "default",
    },
    {
      "bgVariable": "color-surface",
      "borderRadius": 4,
      "disabled": false,
      "icon": null,
      "iconColor": null,
      "iconSize": null,
      "opacity": 1,
      "ringVariable": "color-error",
      "size": 16,
      "state": "unchecked",
      "variant": "error",
    },
    {
      "bgVariable": "color-surface",
      "borderRadius": 4,
      "disabled": true,
      "icon": null,
      "iconColor": null,
      "iconSize": null,
      "opacity": 0.5,
      "ringVariable": "color-error",
      "size": 16,
      "state": "unchecked",
      "variant": "error",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": false,
      "icon": "ph-check",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 1,
      "ringVariable": "color-border",
      "size": 16,
      "state": "checked",
      "variant": "default",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": true,
      "icon": "ph-check",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 0.5,
      "ringVariable": "color-border",
      "size": 16,
      "state": "checked",
      "variant": "default",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": false,
      "icon": "ph-check",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 1,
      "ringVariable": "color-error",
      "size": 16,
      "state": "checked",
      "variant": "error",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": true,
      "icon": "ph-check",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 0.5,
      "ringVariable": "color-error",
      "size": 16,
      "state": "checked",
      "variant": "error",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": false,
      "icon": "ph-minus",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 1,
      "ringVariable": "color-border",
      "size": 16,
      "state": "indeterminate",
      "variant": "default",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": true,
      "icon": "ph-minus",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 0.5,
      "ringVariable": "color-border",
      "size": 16,
      "state": "indeterminate",
      "variant": "default",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": false,
      "icon": "ph-minus",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 1,
      "ringVariable": "color-error",
      "size": 16,
      "state": "indeterminate",
      "variant": "error",
    },
    {
      "bgVariable": "color-surface-inverse",
      "borderRadius": 4,
      "disabled": true,
      "icon": "ph-minus",
      "iconColor": "text-white",
      "iconSize": 12,
      "opacity": 0.5,
      "ringVariable": "color-error",
      "size": 16,
      "state": "indeterminate",
      "variant": "error",
    },
  ],
  "constants": {
    "borderRadius": 4,
    "boxSize": 16,
    "iconSize": 12,
    "labelGap": 8,
  },
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 8,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "states": [
    "unchecked",
    "checked",
    "indeterminate",
  ],
  "stylingConfig": {
    "baseTokens": [
      "bg-surface",
      "ring-border",
    ],
    "borderRadius": "rounded-sm",
    "dimensions": "h-4 w-4",
    "icons": [
      {
        "name": "ph-check",
        "size": 12,
        "state": "checked",
      },
      {
        "name": "ph-minus",
        "size": 12,
        "state": "indeterminate",
      },
    ],
    "states": {
      "checked": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
      "disabled": [
        "opacity-50",
        "cursor-not-allowed",
      ],
      "error": [
        "ring-error",
      ],
      "focus": [
        "ring-active",
      ],
      "hover": [
        "ring-active",
      ],
      "indeterminate": [
        "bg-surface-inverse",
        "text-surface-inverse",
      ],
    },
  },
  "textConfig": {
    "fontSize": 14,
    "fontWeight": 500,
    "textVariable": "text-color-surface",
  },
  "variantConfig": {
    "classes": {
      "default": "[&:focus-within>span]:ring-active [&:hover>span]:ring-active",
      "error": "[&>span]:ring-error",
    },
    "default": "default",
    "descriptions": {
      "default": "Default checkbox appearance",
      "error": "Error state for validation failures",
    },
    "stateClasses": {
      "default": {
        "focus": "[&:focus-within>span]:ring-active",
        "hover": "[&:hover>span]:ring-active",
      },
    },
    "values": [
      "default",
      "error",
    ],
  },
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent styling config from registry 1`] = `
{
  "baseTokens": [
    "bg-surface",
    "ring-border",
  ],
  "borderRadius": "rounded-sm",
  "dimensions": "h-4 w-4",
  "icons": [
    {
      "name": "ph-check",
      "size": 12,
      "state": "checked",
    },
    {
      "name": "ph-minus",
      "size": 12,
      "state": "indeterminate",
    },
  ],
  "states": {
    "checked": [
      "bg-surface-inverse",
      "text-surface-inverse",
    ],
    "disabled": [
      "opacity-50",
      "cursor-not-allowed",
    ],
    "error": [
      "ring-error",
    ],
    "focus": [
      "ring-active",
    ],
    "hover": [
      "ring-active",
    ],
    "indeterminate": [
      "bg-surface-inverse",
      "text-surface-inverse",
    ],
  },
}
`;

exports[`Checkbox Generator - Snapshot Tests (Intermediate Data) > should produce consistent variant config from registry 1`] = `
{
  "classes": {
    "default": "[&:focus-within>span]:ring-active [&:hover>span]:ring-active",
    "error": "[&>span]:ring-error",
  },
  "default": "default",
  "descriptions": {
    "default": "Default checkbox appearance",
    "error": "Error state for validation failures",
  },
  "stateClasses": {
    "default": {
      "focus": "[&:focus-within>span]:ring-active",
      "hover": "[&:hover>span]:ring-active",
    },
  },
  "values": [
    "default",
    "error",
  ],
}
`;
